<resources>
    <string name="app_name">Workout 7 minute App</string>
    <string name="image">image</string>
    <string name="get_ready_for">Get ready for</string>
    <string name="your_next_workout">Your Next Workout</string>
    <string name="your_progress">Your Progress</string>
    <string name="see_details">See Details</string>
    <string name="next_exercise">Next Exercise</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="exercise">Exercise</string>
    <string name="_3_of_10">3 of 10</string>
    <string name="ladypushup">ladyPushUp</string>
    <string name="jumping_jags">Jumping Jags</string>
    <string name="bmi">BMI</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="history">History</string>

    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_your_password">Forgot Your Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
</resources>